# trc2025

./: .gitignore  README.md
crazyflie_lcis/: CMakeLists.txt  package.xml
crazyflie_lcis/crazyflie_lcis/: bridge_config.py  initial_position.py
crazyflie_lcis_bringup/: CMakeLists.txt  package.xml
crazyflie_lcis_bringup/launch/: spawn_multiple_robots.launch.py  spawn_single_robot.launch.py
crazyflie_lcis_description/: CMakeLists.txt  package.xml
crazyflie_lcis_description/models/crazyflie/: model.config  model.sdf
crazyflie_lcis_description/urdf/: my_crazyflie.urdf
crazyflie_lcis_examples/: CMakeLists.txt  package.xml
crazyflie_lcis_gazebo/: CMakeLists.txt  package.xml
crazyflie_lcis_gazebo/src/: crazysim_plugin.cpp
setup/: Dockerfile  Dockerfile.old  Makefile
setup/sub_makefiles/: linux.mk
